--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% block content %}
+{% include 'home/LoginRegister.html' %}
 <footer>
     <!-- Footer Start-->
     <div class="footer-area footer-bg footer-padding">
