--- a/templates/header.html
+++ b/templates/header.html
@@ -18,8 +18,8 @@
                             <div class="main-menu">
                                 <nav class="d-none d-lg-block">
                                     <ul id="navigation">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="job_listing.html">Find a Jobs </a></li>
+                                        <li><a href="/">Home</a></li>
+                                        <li><a href="{% url 'job-list' %}">Find a Jobs </a></li>
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="#">Page</a>
                                             <ul class="submenu">
@@ -29,14 +29,14 @@
                                                 <li><a href="job_details.html">job Details</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="{% url 'contact' %}">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>          
                             <!-- Header-btn -->
                             <div class="header-btn d-none f-right d-lg-block">
-                                <a href="#" class="btn head-btn1">Register</a>
-                                <a href="#" class="btn head-btn2">Login</a>
+                                <a href="#" class="btn head-btn1" data-toggle="modal" data-target="#registerModal">Register</a>
+                                <a href="#" class="btn head-btn2" data-toggle="modal" data-target="#loginModal">Login</a>
                             </div>
                         </div>
                     </div>
