--- a/templates/header.html
+++ b/templates/header.html
@@ -20,7 +20,7 @@
                                     <ul id="navigation">
                                         <li><a href="/">Home</a></li>
                                         <li><a href="{% url 'job-list' %}">Find a Jobs </a></li>
-                                        <li><a href="about.html">About</a></li>
+                                        <li><a href="{% url 'about' %}">About</a></li>
                                         <li><a href="#">Page</a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">Blog</a></li>
