--- a/templates/job/job_list.html
+++ b/templates/job/job_list.html
@@ -207,6 +207,7 @@
                         </div>
                         <!-- Count of Job list End -->
                         <!-- single-job-content -->
+                        {% for job in jobs %}
                         <div class="single-job-items mb-30">
                             <div class="job-items">
                                 <div class="company-img">
@@ -214,152 +215,21 @@
                                 </div>
                                 <div class="job-tittle job-tittle2">
                                     <a href="#">
-                                        <h4>Digital Marketer</h4>
+                                        <h4>{{ job.title }}</h4>
                                     </a>
                                     <ul>
-                                        <li>Creative Agency</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
-                                        <li>$3500 - $4000</li>
+                                        <li>{{ job.category }}</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>{{ job.location }}</li>
+                                        <li>{{ job.salary }}</li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="items-link items-link2 f-right">
-                                <a href="{% url 'job-detail' %}">Full Time</a>
-                                <span>7 hours ago</span>
+                                <a href="{% url 'job-detail' %}">{{ job.job_type }}</a>
+                                <span>{{ job.posted_at }}</span>
                             </div>
                         </div>
-                        <!-- single-job-content -->
-                        <div class="single-job-items mb-30">
-                            <div class="job-items">
-                                <div class="company-img">
-                                    <a href="#"><img src="{% static 'assets/img/icon/job-list2.png' %}" alt=""></a>
-                                </div>
-                                <div class="job-tittle job-tittle2">
-                                    <a href="#">
-                                        <h4>Digital Marketer</h4>
-                                    </a>
-                                    <ul>
-                                        <li>Creative Agency</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
-                                        <li>$3500 - $4000</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="items-link items-link2 f-right">
-                                <a href="{% url 'job-detail' %}">Full Time</a>
-                                <span>7 hours ago</span>
-                            </div>
-                        </div>
-                        <!-- single-job-content -->
-                        <div class="single-job-items mb-30">
-                            <div class="job-items">
-                                <div class="company-img">
-                                    <a href="#"><img src="{% static 'assets/img/icon/job-list3.png' %}" alt=""></a>
-                                </div>
-                                <div class="job-tittle job-tittle2">
-                                    <a href="#">
-                                        <h4>Digital Marketer</h4>
-                                    </a>
-                                    <ul>
-                                        <li>Creative Agency</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
-                                        <li>$3500 - $4000</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="items-link items-link2 f-right">
-                                <a href="{% url 'job-detail' %}">Full Time</a>
-                                <span>7 hours ago</span>
-                            </div>
-                        </div>
-                        <!-- single-job-content -->
-                        <div class="single-job-items mb-30">
-                            <div class="job-items">
-                                <div class="company-img">
-                                    <a href="#"><img src="{% static 'assets/img/icon/job-list4.png' %}" alt=""></a>
-                                </div>
-                                <div class="job-tittle job-tittle2">
-                                    <a href="#">
-                                        <h4>Digital Marketer</h4>
-                                    </a>
-                                    <ul>
-                                        <li>Creative Agency</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
-                                        <li>$3500 - $4000</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="items-link items-link2 f-right">
-                                <a href="{% url 'job-detail' %}">Full Time</a>
-                                <span>7 hours ago</span>
-                            </div>
-                        </div>
-                        <!-- single-job-content -->
-                        <div class="single-job-items mb-30">
-                            <div class="job-items">
-                                <div class="company-img">
-                                    <a href="#"><img src="{% static 'assets/img/icon/job-list1.png' %}" alt=""></a>
-                                </div>
-                                <div class="job-tittle job-tittle2">
-                                    <a href="#">
-                                        <h4>Digital Marketer</h4>
-                                    </a>
-                                    <ul>
-                                        <li>Creative Agency</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
-                                        <li>$3500 - $4000</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="items-link items-link2 f-right">
-                                <a href="{% url 'job-detail' %}">Full Time</a>
-                                <span>7 hours ago</span>
-                            </div>
-                        </div>
-                        <!-- single-job-content -->
-                        <div class="single-job-items mb-30">
-                            <div class="job-items">
-                                <div class="company-img">
-                                    <a href="#"><img src="{% static 'assets/img/icon/job-list3.png' %}" alt=""></a>
-                                </div>
-                                <div class="job-tittle job-tittle2">
-                                    <a href="#">
-                                        <h4>Digital Marketer</h4>
-                                    </a>
-                                    <ul>
-                                        <li>Creative Agency</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
-                                        <li>$3500 - $4000</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="items-link items-link2 f-right">
-                                <a href="{% url 'job-detail' %}">Full Time</a>
-                                <span>7 hours ago</span>
-                            </div>
-                        </div>
-                        <!-- single-job-content -->
-                        <div class="single-job-items mb-30">
-                            <div class="job-items">
-                                <div class="company-img">
-                                    <a href="#"><img src="{% static 'assets/img/icon/job-list4.png' %}" alt=""></a>
-                                </div>
-                                <div class="job-tittle job-tittle2">
-                                    <a href="#">
-                                        <h4>Digital Marketer</h4>
-                                    </a>
-                                    <ul>
-                                        <li>Creative Agency</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
-                                        <li>$3500 - $4000</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="items-link items-link2 f-right">
-                                <a href="{% url 'job-detail' %}">Full Time</a>
-                                <span>7 hours ago</span>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </section>
                 <!-- Featured_job_end -->
@@ -369,6 +239,7 @@
 </div>
 <!-- Job List Area End -->
 <!--Pagination Start  -->
+{% if is_paginated %}
 <div class="pagination-area pb-115 text-center">
     <div class="container">
         <div class="row">
@@ -376,10 +247,25 @@
                 <div class="single-wrap d-flex justify-content-center">
                     <nav aria-label="Page navigation example">
                         <ul class="pagination justify-content-start">
-                            <li class="page-item active"><a class="page-link" href="#">01</a></li>
-                            <li class="page-item"><a class="page-link" href="#">02</a></li>
-                            <li class="page-item"><a class="page-link" href="#">03</a></li>
-                        <li class="page-item"><a class="page-link" href="#"><span class="ti-angle-right"></span></a></li>
+                        {% if page_obj.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+                                <span class="ti-angle-left"></span>
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% for i in page_obj.paginator.page_range %}
+                            <li class="page-item {% if i == page_obj.number %}active{% endif %}">
+                                <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                            </li>
+                        {% endfor %}
+                        {% if page_obj.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+                                <span class="ti-angle-right"></span>
+                            </a>
+                        </li>
+                        {% endif %}
                         </ul>
                     </nav>
                 </div>
@@ -387,5 +273,7 @@
         </div>
     </div>
 </div>
+{% endif %}
+
 <!--Pagination End  -->
 {% endblock content %}
