--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,6 @@
     <title>Job board HTML-5 Template </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="site.webmanifest">
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}">
 
     <!-- CSS here -->
@@ -28,7 +27,7 @@
 
 <body>
     <!-- Preloader Start -->
-    <div id="preloader-active">
+    <!-- <div id="preloader-active">
         <div class="preloader d-flex align-items-center justify-content-center">
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
@@ -37,7 +36,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     {% include "header.html" %}
     {% block content %}
