--- a/templates/home/categories.html
+++ b/templates/home/categories.html
@@ -6,8 +6,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-tittle text-center">
-                    <span>FEATURED TOURS Packages</span>
-                    <h2>Browse Top Categories </h2>
+                    <h2>Browse Categories </h2>
                 </div>
             </div>
         </div>
@@ -26,15 +25,7 @@
             </div>
         {% endfor %}
         </div>
-        <!-- More Btn -->
-        <!-- Section Button -->
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="browse-btn2 text-center mt-50">
-                    <a href="job_listing.html" class="border-btn2">Browse All Sectors</a>
-                </div>
-            </div>
-        </div>
+
     </div>
 </div>
 <!-- Our Services End -->
