--- a/templates/home/featured_job.html
+++ b/templates/home/featured_job.html
@@ -37,6 +37,15 @@
                         {% endfor %}
                     </div>
                 </div>
+                        <!-- More Btn -->
+        <!-- Section Button -->
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="browse-btn2 text-center mt-50">
+                    <a href="{% url 'job-list'%}" class="border-btn2">Browse All Jobs</a>
+                </div>
+            </div>
+        </div>
             </div>
         </section>
         <!-- Featured_job_end -->
