--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
                     <div class="col-lg-3 col-md-2">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html"><img src="{% static 'assets/img/logo/logo.png' %}" alt=""></a>
+                            <a href="{% url 'home'%}"><img src="{% static 'assets/img/logo/logo.png' %}" alt=""></a>
                         </div>  
                     </div>
                     <div class="col-lg-9 col-md-9">
@@ -19,16 +19,22 @@
                                 <nav class="d-none d-lg-block">
                                     <ul id="navigation">
                                         <li><a href="{% url 'home'%}">Home</a></li>
-                                        <li><a href="{% url 'job-list' %}">Find a Jobs </a></li>
+                                        {% if not request.user.is_recruiter %}
+                                        <li><a href="{% url 'job-list' %}">Find Jobs </a></li>
+                                        {% endif %}
+                                        {% if request.user.is_authenticated %}
+                                        {% if request.user.is_applicant %}
+                                        <li><a href="{% url 'job-list' %}">Resume</a></li>
+                                        {% endif %}
+                                        {% if request.user.is_recruiter %}
+                                        {% if request.user.has_company %}
+                                        <li><a href="{% url 'about' %}">Post Jobs</a></li>
+                                        {% else %}
+                                        <li><a href="{% url 'update-company' %}">Create Company </a></li>
+                                        {% endif %}
+                                        {% endif %}
+                                        {% endif %}
                                         <li><a href="{% url 'about' %}">About</a></li>
-                                        <li><a href="#">Page</a>
-                                            <ul class="submenu">
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="single-blog.html">Blog Details</a></li>
-                                                <li><a href="elements.html">Elements</a></li>
-                                                <li><a href="job_details.html">job Details</a></li>
-                                            </ul>
-                                        </li>
                                         <li><a href="{% url 'contact' %}">Contact</a></li>
                                     </ul>
                                 </nav>
