--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
                     <div class="col-lg-3 col-md-2">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="{% url 'home'%}"><img src="{% static 'assets/img/logo/logo.png' %}" alt=""></a>
+                            <a href="/"><img src="{% static 'assets/img/logo/logo.png' %}" alt=""></a>
                         </div>  
                     </div>
                     <div class="col-lg-9 col-md-9">
@@ -28,7 +28,8 @@
                                         {% endif %}
                                         {% if request.user.is_recruiter %}
                                         {% if request.user.has_company %}
-                                        <li><a href="{% url 'about' %}">Post Jobs</a></li>
+                                        <li><a href="{% url 'create-job' %}">Post Jobs</a></li>
+                                        <li><a href="{% url 'create-job' %}">Update Jobs</a></li>
                                         {% else %}
                                         <li><a href="{% url 'update-company' %}">Create Company </a></li>
                                         {% endif %}
@@ -40,12 +41,12 @@
                                 </nav>
                             </div>          
                             <!-- Header-btn -->
-                            <div class="header-btn d-none f-right d-lg-block">
+                            <div class="header-btn  f-right d-lg-block">
                                 {% if user.is_authenticated %}
                                 <a href="{% url 'logout' %}" class="genric-btn danger" >Logout</a>
                                 {% else %}
-                                <a href="{% url 'register-applicant' %}" class="btn head-btn1" >Register</a>
-                                <a href="{% url 'login' %}" class="btn head-btn2" >Login</a>
+                                <a href="{% url 'register-applicant' %}" class="genric-btn primary" >Register</a>
+                                <a href="{% url 'login' %}" class="genric-btn primary-border" >Login</a>
                                 {% endif %}
                             </div>
                         </div>
