--- a/templates/users/register_applicant.html
+++ b/templates/users/register_applicant.html
@@ -32,6 +32,9 @@
         <div class="mx-auto">
             <p class="mb-0 mt-3"><small class="text-dark mr-2">Already have an account ?</small> <a href="{% url 'login' %}" class="text-dark font-weight-bold">Sign in</a></p>
         </div>
+        <div class="col-12 text-center">
+            <p class="mb-0 mt-3"><small class="text-dark mr-2">Register as Recruiter</small><a href="{% url 'register-recruiter' %}" class="text-dark font-weight-bold">Register</a></p>
+        </div>
     </div>
 </form>
 {% endblock content %}
