--- a/templates/header.html
+++ b/templates/header.html
@@ -21,15 +21,16 @@
                                         <li><a href="{% url 'home'%}">Home</a></li>
                                         {% if not request.user.is_recruiter %}
                                         <li><a href="{% url 'job-list' %}">Find Jobs </a></li>
+                                        <li><a href="{% url 'applied-jobs' %}">Applied Jobs </a></li>
                                         {% endif %}
                                         {% if request.user.is_authenticated %}
                                         {% if request.user.is_applicant %}
-                                        <li><a href="{% url 'job-list' %}">Resume</a></li>
+                                        <li><a href="{% url 'resume-details' pk=user.resume.id%}">Resume</a></li>
                                         {% endif %}
                                         {% if request.user.is_recruiter %}
                                         {% if request.user.has_company %}
                                         <li><a href="{% url 'create-job' %}">Post Jobs</a></li>
-                                        <li><a href="{% url 'create-job' %}">Update Jobs</a></li>
+                                        <li><a href="{% url 'manage-jobs' %}">Manage Jobs</a></li>
                                         {% else %}
                                         <li><a href="{% url 'update-company' %}">Create Company </a></li>
                                         {% endif %}
