--- a/templates/home.html
+++ b/templates/home.html
@@ -4,22 +4,27 @@
     <main>
         {% include 'home/job_search.html' %}
         {% include 'home/categories.html' %}
-        <!-- Online CV Area Start -->
-         <div class="online-cv cv-bg section-overly pt-90 pb-120"  data-background="{% static 'assets/img/gallery/cv_bg.jpg' %}">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-xl-10">
-                        <div class="cv-caption text-center">
-                            <p class="pera1">FEATURED TOURS Packages</p>
-                            <p class="pera2"> Make a Difference with Your Online Resume!</p>
-                            <a href="#" class="border-btn2 border-btn4">Upload your cv</a>
+
+        {% if not request.user.is_recruiter %}
+                <!-- Online CV Area Start -->
+                <div class="online-cv cv-bg section-overly pt-90 pb-120"  data-background="{% static 'assets/img/gallery/cv_bg.jpg' %}">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-xl-10">
+                                <div class="cv-caption text-center">
+                                    <p class="pera1">FEATURED TOURS Packages</p>
+                                    <p class="pera2"> Make a Difference with Your Online Resume!</p>
+                                    {% if request.user.is_applicant %}
+                                    <a href="{% url 'resume-details' pk=user.resume.id%}" class="border-btn2 border-btn4">Upload your cv</a>
+                                    {% endif %}
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <!-- Online CV Area End-->
+                <!-- Online CV Area End-->
         {% include 'home/featured_job.html' %}
+        {% endif %}
         <!-- How  Apply Process Start-->
         <div class="apply-process-area apply-bg pt-150 pb-150" data-background="{% static 'assets/img/gallery/how-applybg.png' %}">
             <div class="container">
