--- a/templates/job/manage_jobs.html
+++ b/templates/job/manage_jobs.html
@@ -2,15 +2,14 @@
 {% load static %}
 {% load humanize %}
 {% block content %}
-<!-- Hero Area Start-->
-<div class="slider-area ">
-    <div class="single-slider section-overly slider-height2 d-flex align-items-center"
-        data-background="{% static 'assets/img/hero/about.jpg' %}">
+ <!-- Hero Area Start-->
+ <div class="slider-area ">
+    <div class="single-slider section-overly slider-height2 d-flex align-items-center" data-background="{% static 'assets/img/hero/about.jpg' %}">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="hero-cap text-center">
-                        <h2>Get your job</h2>
+                        <h2>Manage jobs</h2>
                     </div>
                 </div>
             </div>
@@ -21,13 +20,14 @@
 <!-- Job List Area Start -->
 <div class="job-listing-area pt-120 pb-120">
     <div class="container">
+        
         <div class="row">
-            {% include 'job/job_list_left.html' %}
             <!-- Right content -->
             <div class="col-xl-9 col-lg-9 col-md-8">
                 <!-- Featured_job_start -->
                 <section class="featured-job-area">
                     <div class="container">
+                        <!-- Count of Job list Start -->
                         <form action="{% url 'job-search' %}" method="get">
                             <div class="form-group">
                                 <div class="input-group mb-3">
@@ -40,11 +40,10 @@
                                 </div>
                             </div>
                         </form>
-                        <!-- Count of Job list Start -->
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="count-job mb-35">
-                                    <span>{{ total_job_count }} Jobs found</span>
+                                    <span> {{ total_job_count }} Jobs found</span>
                                     <!-- Select job items start -->
                                     <div class="select-job-items">
                                         <span>Sort by</span>
@@ -65,9 +64,7 @@
                         <div class="single-job-items mb-30">
                             <div class="job-items">
                                 <div class="company-img">
-                                    <a href="{% url 'job-detail' job.pk %}"><img
-                                            src="{% if job.company.logo %} {{  job.company.logo.url  }} {% endif %}"
-                                            alt="{{ job.company.name|truncatechars:5 }}"></a>
+                                    <a href="{% url 'job-detail' job.pk %}"><img src="{% if job.company.logo %} {{  job.company.logo.url  }} {% endif %}" alt="{{ job.company.name|truncatechars:5 }}"></a>
                                 </div>
                                 <div class="job-tittle job-tittle2">
                                     <a href="{% url 'job-detail' job.pk %}">
@@ -95,7 +92,7 @@
 </div>
 <!-- Job List Area End -->
 <!--Pagination Start  -->
-{% if is_paginated %}
+{% if page_obj.has_other_pages %}
 <div class="pagination-area pb-115 text-center">
     <div class="container">
         <div class="row">
@@ -110,11 +107,13 @@
                                 </a>
                             </li>
                             {% endif %}
+                            
                             {% for i in page_obj.paginator.page_range %}
-                            <li class="page-item {% if i == page_obj.number %}active{% endif %}">
-                                <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-                            </li>
+                                <li class="page-item {% if i == page_obj.number %}active{% endif %}">
+                                    <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                                </li>
                             {% endfor %}
+                            
                             {% if page_obj.has_next %}
                             <li class="page-item">
                                 <a class="page-link" href="?page={{ page_obj.next_page_number }}">
@@ -130,6 +129,7 @@
     </div>
 </div>
 {% endif %}
+
 
 <!--Pagination End  -->
 {% endblock content %}
