--- a/templates/resume/update_resume.html
+++ b/templates/resume/update_resume.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-lg-8 col-md-8">
                 <h3 class="mb-30">Create A Resume</h3>
-                <form method="POST">
+                <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="mt-10">
                         {% render_field form.first_name class="single-input" placeholder="First Name"%}
@@ -19,6 +19,9 @@
                     </div>
                     <div class="mt-10">
                         {% render_field form.job_title class="single-input" placeholder="Job title"%}
+                    </div>
+                    <div class="mt-10">
+                        {% render_field form.upload_resume class="single-input" placeholder=" Resume"%}
                     </div>
                     <br>
                     <button type="submit" class="genric-btn primary-border">Submit</button>
