--- a/templates/resume/update_resume.html
+++ b/templates/resume/update_resume.html
@@ -21,7 +21,7 @@
                         {% render_field form.job_title class="single-input" placeholder="Job title"%}
                     </div>
                     <div class="mt-10">
-                        {% render_field form.upload_resume class="single-input" placeholder=" Resume"%}
+                        {% render_field form.upload_resume class="single-input" placeholder=" Resume" required %}
                     </div>
                     <br>
                     <button type="submit" class="genric-btn primary-border">Submit</button>
