--- a/templates/home/categories.html
+++ b/templates/home/categories.html
@@ -18,7 +18,7 @@
                     <img src="{{ category.image.url }}" alt="{{ category.name }}" width="100">
                     </div>
                     <div class="services-cap">
-                       <h5><a href="job_listing.html">{{ category.name }}</a></h5>
+                       <h5><a href="{% url 'jobs-by-category' category.id %}">{{ category.name }}</a></h5>
                         <span>(653)</span>
                     </div>
                 </div>
