--- a/templates/job/job_list.html
+++ b/templates/job/job_list.html
@@ -44,19 +44,9 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="count-job mb-35">
-                                    <span>{{ total_job_count }} Jobs found</span>
-                                    <!-- Select job items start -->
-                                    <div class="select-job-items">
-                                        <span>Sort by</span>
-                                        <select name="select">
-                                            <option value="">None</option>
-                                            <option value="">job list</option>
-                                            <option value="">job list</option>
-                                            <option value="">job list</option>
-                                        </select>
-                                    </div>
-                                    <!--  Select job items End-->
-                                </div>
+                                    {% if total_job_count > 0 %}
+                                    {{ total_job_count }} Jobs found
+                                {% endif %}                                </div>
                             </div>
                         </div>
                         <!-- Count of Job list End -->
