--- a/templates/job/job_list_left.html
+++ b/templates/job/job_list_left.html
@@ -1,60 +1,31 @@
 {% load static %}
-<!-- Left content -->
 <div class="col-xl-3 col-lg-3 col-md-4">
-    <div class="row">
-        <div class="col-12">
-            <div class="small-section-tittle2 mb-45">
-                <div class="ion"> <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        width="20px" height="12px">
-                        <path fill-rule="evenodd" fill="rgb(27, 207, 107)"
-                            d="M7.778,12.000 L12.222,12.000 L12.222,10.000 L7.778,10.000 L7.778,12.000 ZM-0.000,-0.000 L-0.000,2.000 L20.000,2.000 L20.000,-0.000 L-0.000,-0.000 ZM3.333,7.000 L16.667,7.000 L16.667,5.000 L3.333,5.000 L3.333,7.000 Z" />
-                    </svg>
-                </div>
-                <h4>Filter Jobs</h4>
+    <form method="get" action="" id="filter-form">
+        <!-- Filter Title -->
+        <div class="small-section-tittle2 mb-45">
+            <div class="ion">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="12px">
+                    <path fill-rule="evenodd" fill="rgb(27, 207, 107)"
+                        d="M7.778,12.000 L12.222,12.000 L12.222,10.000 L7.778,10.000 L7.778,12.000 ZM-0.000,-0.000 L-0.000,2.000 L20.000,2.000 L20.000,-0.000 L-0.000,-0.000 ZM3.333,7.000 L16.667,7.000 L16.667,5.000 L3.333,5.000 L3.333,7.000 Z" />
+                </svg>
             </div>
+            <h4>Filter Jobs</h4>
         </div>
-    </div>
-    <!-- Job Category Listing start -->
-    <div class="job-category-listing mb-50">
-        <!-- single one -->
-        <div class="single-listing">
+
+        <!-- Category Filter as Checkboxes -->
+        <div class="select-Categories mb-4">
             <div class="small-section-tittle2">
                 <h4>Job Category</h4>
             </div>
-            <!-- Select job items start -->
-            <div class="select-job-items2">
-                <select name="select">
-                    <option value="">All Category</option>
-                    {% for category in categories %}
-                    <option value="{{ category.name }}">{{ category.name }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <!--  Select job items End-->
-            <!-- select-Categories start -->
-            <div class="select-Categories pt-80 pb-50">
-                <div class="small-section-tittle2">
-                    <h4>Job Type</h4>
-                </div>
-                <label class="container">Full Time
-                    <input type="checkbox">
-                    <span class="checkmark"></span>
-                </label>
-                <label class="container">Part Time
-                    <input type="checkbox" checked="checked active">
-                    <span class="checkmark"></span>
-                </label>
-                <label class="container">Remote
-                    <input type="checkbox">
-                    <span class="checkmark"></span>
-                </label>
-                <label class="container">Freelance
-                    <input type="checkbox">
-                    <span class="checkmark"></span>
-                </label>
-            </div>
-            <!-- select-Categories End -->
+            {{ filter.form.category }}
         </div>
-    </div>
-    <!-- Job Category Listing End -->
+
+        <!-- Job Type Filter as Checkboxes -->
+        <div class="select-Categories">
+            <div class="small-section-tittle2">
+                <h4>Job Type</h4>
+            </div>
+            {{ filter.form.job_type }}
+        </div>
+    </form>
 </div>
